# ExperienceOS

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py  phase11.py  transition_integration_smoke.py  validation_phase11.py  validation_v2.py
demo/: app.py  demo_config.py  env.py  extraction_diagnostics.py  lifecycle_script.py  support.py  transition_diagnostics.py
deploy/: Dockerfile  README.md
docs/: action_replacement.md  action_replacement_adoption_report.md  action_replacement_contract.md  action_replacement_dashboard.md  action_replacement_matching.md  action_replacement_plan.md  action_replacement_seam_audit.md  action_replacement_validation.md  architecture.md  benchmark_baselines.md  benchmark_contract.md  benchmark_experienceos_adapters.md  benchmark_metrics.md  benchmark_report.md  benchmark_report_v2.md  benchmark_runner.md  bounded_runtime_transition_authority.md  canonical_lifecycle_activation_audit.md  canonical_lifecycle_activation_defect.md  canonical_lifecycle_claims_matrix.md  canonical_lifecycle_transitions.md  competitive_viability_contract.md  competitive_viability_harness.md  competitive_viability_report.md  controller_architecture.md  dashboard_phase11_diagnostics.md  demo_script.md  deterministic_grounded_extraction.md  embedding_providers.md  extraction_diagnostics_dashboard.md  extraction_integration.md  forget_directive_intelligence.md  grounded_candidate_validation.md  grounded_extraction_contract.md  grounded_extraction_fixture_audit.md  grounded_extraction_report.md  judging_pitch.md  (+29 more)
(+576 files in other folders)
