[project]
name = "experienceos"
version = "0.1.0"
description = "Experience layer for LLM-powered agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
demo = ["streamlit>=1.49"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["experienceos*"]
