[project]
name = "experienceos"
version = "0.1.0"
description = "Experience layer for LLM-powered agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
demo = ["streamlit>=1.49", "python-dotenv>=1.0"]
dev = ["pytest>=7.0"]
local = ["llama-cpp-python>=0.3"]
embeddings-local = ["sentence-transformers>=3.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["experienceos*"]
